--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,11 @@ asgiref==3.7.2
 dj-database-url==0.5.0
 Django==3.2.20
 django-allauth==0.41.0
-django-bootstrap4==23.1
-django-crispy-forms==2.0
-django-extensions==3.2.1
-django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
+Pillow==10.0.0
 psycopg2==2.9.6
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
